isaac running here

--- a/package.json
+++ b/package.json
@@ -1,20 +1,42 @@
 {
   "name": "ghtest",
   "version": "0.1.0",
+  "homepage": "https://alandgmendes.github.io/ghtest",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "@emotion/styled": "^11.10.5",
+    "@mui/x-date-pickers": "^5.0.8",
+    "@react-br-forms/cpf-cnpj-mask": "^1.0.6",
+    "@react-pdf-viewer/core": "^3.8.0",
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^11.2.2",
+    "@testing-library/user-event": "^12.2.2",
+    "axios": "^0.21.1",
+    "bootstrap": "^4.5.3",
+    "dayjs": "^1.11.6",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.25",
+    "moment": "^2.29.4",
+    "papaparse": "^5.3.2",
+    "pdfjs": "^2.4.7",
+    "pdfmake": "^0.2.6",
+    "react": "^17.0.1",
+    "react-bootstrap": "^1.4.0",
+    "react-dom": "^17.0.1",
+    "react-papaparse": "^4.1.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.0",
+    "react-select": "^5.6.0",
+    "react-to-print": "^2.13.0",
+    "universal-cookie": "^4.0.4",
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -34,5 +56,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
